--- a/IDP/hESC_Gene_isoform_detection_and_prediction.html
+++ b/IDP/hESC_Gene_isoform_detection_and_prediction.html
@@ -66,7 +66,7 @@
 			<dd> Out of 5,459 "<b><font color="#FFD801"> Prediction only</font></b>" isoforms, 2,103 are not reported by EST or annotated by RefSeq, Ensembl, KnownGen or Gencode. <a href="hESC_Novel_gene_isoforms.html">Please see more details in the section of "<b>Novel gene isoforms</b>"</a></dd>		
 
 	</ul>
-	    <p>  We keep optimizing the results by running the updated LSC and IDP. More and more reliable results will be updated. If you want to subscribe our update news, please contact Kin Fai Au: <img src="images/Picture3.png"> 
+	    <p>  We keep optimizing the results by running the updated LSC and IDP. More and more reliable results will be updated. If you want to subscribe our update news, please contact Kin Fai Au: <img src="images/Picture3.png" width="20%" hight="20%">
 
  
    
