--- a/IDP/hESC_Gene_isoform_detection_and_prediction.html
+++ b/IDP/hESC_Gene_isoform_detection_and_prediction.html
@@ -30,7 +30,28 @@
 <!-- END TOP RED BAR -->
 <div id="content_container">
   <!-- PAGE TITLE AREA AND BOX -->
-  <!-- #include file ="asp_hESC\titlearea.inc" -->
+    <div id="page_title_area">
+    <!-- STANDARD PAGE TITLE; NO DECORATIVE GRAPHIC -->
+    <!-- <div id="page_title_leftcontent"> -->
+    <div id="page_title_leftcontent">
+      <h1>hESC transcriptome</h1>
+      <ul>
+        <li>This Human Embryonic Stem Cell <br>(hESC, H1 cell line) <br>transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/"><b>SpliceMap</b></a>-<a href="http://www.augroup.org/LSC/"><b>LSC</b></a>-<a href="http://www.augroup.org/IDP/"><b>IDP</b></a> pipeline<br>
+
+      </ul>
+    </div>
+    
+    <div id="page_title_rightcontent">
+  <ul>
+
+
+      <li>&nbsp;</li>
+
+    <li><img src="images/IDP.png" width="300" >&nbsp;&nbsp;&nbsp;&nbsp;</li>
+    
+  </ul>
+    </div>
+	</div>
 
 
   <!-- PAGE TITLE LEFT CONTENT WITH OPTIONAL QUAD LAMP DECORATION; UN-COMMENT TO USE -->
