--- a/IDP/hESC_hESC-specific_novel_genes.html
+++ b/IDP/hESC_hESC-specific_novel_genes.html
@@ -299,17 +299,18 @@
       <li><a href="https://github.com/jason-weirather/Au-public">Au lab scripts</a> - Public repository of Au lab scripts and utilities </li>
     </ul>
 
+ <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+  </div>
 
-    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+
 <div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
       <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
+
 <!-- end #content -->
 </body>
-
-
 
 </html>
